Add urn to test error messages

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -3124,6 +3124,8 @@ Odyssee:
   type: w
 Odyssee XX:
   parent: Odyssee
+  metadata:
+    urn: urn:cts:greekLit:tlg0012.tlg002:20
   references:
     GA 55:
     - start: 16
