--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -5708,6 +5708,11 @@ organische Chemie:
   references:
     GA 29/30:
     - start: 311
+pizza:
+  references:
+    zz:
+    - lang: ita
+      start: 1
 positive Forschung:
   references:
     GA 29/30:
