Fix: Make sure `add-ref` adds lang as a property of the lemma
It was previously adding the lang property to the reference.

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -3758,6 +3758,11 @@ Pindar:
     - start: 108
     - start: 110
   type: p
+Pizza:
+  lang: ita
+  references:
+    zz:
+    - start: 1
 Plato:
   metadata:
     urn: urn:cts:greekLit:tlg0059
